address Evan's comment

--- a/Kira.tex
+++ b/Kira.tex
@@ -1066,7 +1066,8 @@ performance of Kira SE and the C version for various core counts on a single mac
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=85mm]{pictures/scaleup}
-		\caption{Single-Node Scale-Up Performance Comparison between Kira SE and the C Version (Lower is Better) \evannote{The 4th caption in the legend needs to change from ``pyKira'' to ``Kira-SE-v2 Relative''}
+		\caption{Single-Node Scale-Up Performance Comparison between Kira SE and the C Version (Lower is Better) 
+		%\evannote{The 4th caption in the legend needs to change from ``pyKira'' to ``Kira-SE-v2 Relative''}
 		\label{fig:scaleup}}
   	\end{center}
 \end{figure}
