Editing pass over intro.

--- a/Kira.bib
+++ b/Kira.bib
@@ -504,3 +504,12 @@ archivePrefix = "arXiv",
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@inproceedings{zhang15,
+  title={Scientific computing meets big data technology: {A}n astronomy use case},
+  author={Zhang, Zhao and Barbary, Kyle and Nothaft, Frank Austin and Sparks, Evan and Zahn, Oliver and Franklin, Michael J and Patterson, David A and Perlmutter, Saul},
+  booktitle={Proceedings of the IEEE International Conference on Big Data (BigData '15)},
+  pages={918--927},
+  year={2015},
+  organization={IEEE}
+}
