--- a/Kira.tex
+++ b/Kira.tex
@@ -1595,22 +1595,23 @@ Frank Austin Nothaft is a PhD student in Computer Science at UC Berkeley. Frank 
 Evan R. Sparks is a Ph.D. student in Computer Science at UC Berkeley. He holds a Masters of Science in Computer Science from UC Berkeley and a Bachelor of Arts in Computer Science with High Honors from Dartmouth College. Prior to joining UC Berkeley, Evan worked in Quantitative Asset Management at MDT Advisers and as an Engineer at the Web Intelligence firm Recorded Future.
 \end{IEEEbiography}
 
-\begin{IEEEbiography}{Oliver Zahn}
-Biography text here.
-\end{IEEEbiography}
-
 \newpage
+
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/oliverzahn.jpg}}]{Oliver Zahn}
+Oliver Zahn is a computational/theoretical astrophysicist and the Executive Director of Berkeley Center for Cosmological Physics.
+Trained as a multipurpose cosmologist, his research program tries to advance the understanding of the origin and evolution of structure in the Universe by applying a variety of analytical and numerical methods to complementary astrophysical observables.
+\end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/michaelfranklin.jpg}}]{Michael J. Franklin}
 Michael J. Franklin is the Thomas M. Siebel Professor of Computer Science  the Director of the Algorithms, Machines, and People Laboratory (AMPLab) at UC Berkeley. Prof. Franklin is a co-PI and Executive Committee member for the Berkeley Institute of Data Science. He is a Fellow of the ACM and a two-time winner of the ACM SIGMOD "Test of Time" award.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/patterson.jpg}}]{David A. Patterson}
-David Patterson is the is the E.H. and M.E. Pardee Professor of Computer Science at UC Berkeley and is a past president of ACM, and past chair of the UC Berkeley Computer Science Department. David has been awarded the IEEE von Neumann Medal, the IEEE Johnson Storage Award, the SIGMOD Test of Time award, the ACM-IEEE Eckert-Mauchly Award, and the Katayanagi Prize. He was also elected to both AAAS societies, the National Academy of Engineering, the National Academy of Sciences, the Silicon Valley Engineering Hall of Fame, and to be a Fellow of the Computer History Museum, the IEEE, and the ACM.
+David Patterson is the E.H. and M.E. Pardee Professor of Computer Science at UC Berkeley and is a past president of ACM, and past chair of the UC Berkeley Computer Science Department. David has been awarded the IEEE von Neumann Medal, the IEEE Johnson Storage Award, the SIGMOD Test of Time award, the ACM-IEEE Eckert-Mauchly Award, and the Katayanagi Prize. He was also elected to both AAAS societies, the National Academy of Engineering, the National Academy of Sciences, the Silicon Valley Engineering Hall of Fame, and to be a Fellow of the Computer History Museum, the IEEE, and the ACM.
 \end{IEEEbiography}
 
 \begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{pictures/saulperlmutter.jpg}}]{Saul Perlmutter}
-Saul Perlmutter is an astrophysicist at the Lawrence Berkeley National Laboratory and a professor of physics at UC Berkeley. He is a member of the American Academy of Arts \& Sciences, a Fellow of the American Association for the Advancement of Science, and a member of the National Academy of Sciences. Along with Brian P. Schmidt and Adam Riess, Saul shared the 2006 Shaw Prize in Astronomy, the 2011 Nobel Prize in Physics, and the 2015 Breakthrough Prize in Fundamental Physics for the discovery of the accelerated expansion of the universe.
+Saul Perlmutter is an astrophysicist at the Lawrence Berkeley National Laboratory, a professor of physics at UC Berkeley, and the director of Berkeley Institute for Data Science. He is a member of the American Academy of Arts \& Sciences, a Fellow of the American Association for the Advancement of Science, and a member of the National Academy of Sciences. Along with Brian P. Schmidt and Adam Riess, Saul shared the 2006 Shaw Prize in Astronomy, the 2011 Nobel Prize in Physics, and the 2015 Breakthrough Prize in Fundamental Physics for the discovery of the accelerated expansion of the universe.
 \end{IEEEbiography}
 
 % insert where needed to balance the two columns on the last page with
