--- a/Cover-Letter.tex
+++ b/Cover-Letter.tex
@@ -28,32 +28,45 @@
 }
 
 
-\title{Scientific Computing Meets Big Data Technology: An Astronomy Use Case}
+\title{Processing Astronomy Imagery Using Big Data Technology}
 \author{Zhao Zhang, Kyle Barbary, Frank Austin Nothaft Evan R. Sparks, \\Oliver Zahn, Michael J. Franklin, David A. Patterson, Saul Perlmutter}
 
 \begin{document}
 \maketitle
-\noindent We are submitting an extended version of the previously published paper~\cite{lamport94} to IEEE Transactions on Big Data.
+\noindent In response to the invitation from Dr. Qiang Yang on 12/29/2015, we are submitting an extended version of our IEEE Big Data 2015 paper~\cite{zhang2015} for fast track consideration for publication in IEEE Transactions on Big Data.
 
-In this extended manuscript, we present a completely new implementation of Kira Source Extractor, Kira-SE-v2.
-The new implementation shows significant performance improvement, though the key concepts of the Kira system remain the same.
-The performance improvement of Kira-SE-v2 fundamentally changes our conclusion in the conference version with 
+Previously in our conference paper, we presented Kira, a flexible, scalable, and performant astronomy image processing toolkit using Apache Spark.
+We also presented the real world Kira Source Extractor application (Kira SE), and used this application to study the programming flexibility,
+dataflow richness, scheduling capacity and performance of the surrounding ecosystem.
+
+The previous Kira SE application was reported as CPU bound, though the original C implementation was disk bound.
+From there, we investigated the performance bottleneck and confirmed that the slowdown was due to inefficient communication 
+between different programming language runtimes.
+Then we optimized Kira SE's data layout and took efforts to make zero-copy calls to external libraries, which lead
+to significant performance improvements, though the key concepts of the Kira system remained the same.
+In this extended manuscript, we present the completely new implementation of Kira and the Kira Source Extractor application which is referred as Kira-SE-v2.
+
+In particular, we made the following changes:
+\begin{itemize}
+\item{} The performance improvement of Kira-SE-v2 fundamentally changes our conclusion in the conference version with 
 a 5x and 1.8x speedup over the HPC solution on Amazon cloud and the NERSC Edison supercomputer, respectively.
-In addition, we show that Kira-SE-v2 can be 2x faster with solid state disks than spinning disks.
-We also study the tradeoff space of latency and throughput of Kira-SE-v2 when it is deployed as a streaming application.
-We show that Kira-SE-v2 can achieve second-scale latency with a sustained throughput of $\sim$600~MB/s on a 16-node cluster.
+\item{} We also added an investigation of the performance of Kira-SE-v2 using Solid State Disks (SSDs) rather than spinning disks.  
+Our results indicate a further speed up of nearly 2x from this change.
+\item{} A further addition is an examination of the performance of Kira-SE-v2 when it is implemented as a streaming application.  In this case our results show that Kira-SE-v2 achieves second-scale latency with a sustained throughput of $\sim$600~MB/s on a 16-node cluster.
+\end{itemize}
 
-We completely rewrite the performance section (Page 6 -- Page 10) to include the measurements of Kira-SE-v2 and comparison
+In terms of changes to the text, we completely rewrote and augmented Section 8 (pages 6-10) to include the measurements of Kira-SE-v2 and the comparison
 to the HPC solution on the cloud and the NERSC Edison supercomputer.
-Section~8.4 is newly added to include the performance improvements that can be contributed by solid state disks.
-Section~8.5 is newly added to present the latency-throughput tradeoff space study when deploying Kira as a streaming application.
-The abstract, introduction, design and implementation sections are also updated to reflect the changes in Kira-SE-v2.
-In summary, we update more than 50~\% of the conference paper, which is more than the 30~\% new stuff requirement.
+Section~8.4 was newly added to include the performance improvements that can be contributed by solid state disks.
+Section~8.5 was newly added to present the latency-throughput tradeoff study when deploying Kira as a streaming application.
+The abstract, introduction, design and implementation sections were also updated to reflect the changes in Kira-SE-v2.
+In summary this submission represents a substantial enhancement of our original conference paper.   
+We estimate that over 50\% this submission is new and/or updated compared to the conference submission.
 
 
 \begin{thebibliography}{1}
 
-\bibitem{lamport94}
+\bibitem{zhang2015}
 Zhang, Zhao, Kyle Barbary, Frank Austin Nothaft, Evan Sparks, Oliver Zahn, Michael J. Franklin, David A. Patterson, and Saul Perlmutter. "Scientific computing meets big data technology: An astronomy use case." In Big Data (Big Data), 2015 IEEE International Conference on, pp. 918-927. IEEE, 2015.
 \end{thebibliography}
 
